<resources>
    <string name="app_name">TIC TAC TOE</string>
    <string name="single_player">Single Player</string>
    <string name="help">help</string>
    <string name="double_player">Double Player</string>
    <string name="contact_us">contact Us</string>
    <string name="exit">Exit</string>
    <string name="guide_game">guide game</string>
    <string name="guide_game.txt">
        You can play Tic Tac Toe with your friends.That our programming team
        created in this artificial intelligence game has done that you can with
        it on two levels, easy and hard play The Tic Tac Toe is run with two blue
        and red dice Such that if three beads of the same color are next to each
        other The game will be in favor of the winning player.
    </string>
    <string name="contact_us.txt">
        The support team of Lollipop company is by your side in this section
        Respond to your problems, comments and criticisms.
        Please, in order to speed up and facilitate the response, your question in the form of a
        Send a message. Your message will be checked and answered as soon as possible will be given.
        Thank you for your patience.
    </string>
    <string name="play_again">Play again</string>
    <string name="player2">Player2</string>
    <string name="_0">0</string>
    <string name="__0">0</string>
    <string name="player1">Player1</string>
    <string name="enter_your_name_please">Enter your name Please:</string>
    <string name="_player2">Player2</string>
    <string name="_player1">Player1</string>
    <string name="play">Play</string>
    <string name="select_your_level_game">Select your level game!</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
</resources>
