<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@drawable/back">
    <Button
        android:id="@+id/btn_single_player"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/single_player"
        android:textSize="20sp"
        android:onClick="btnsClick"
        android:background="@drawable/buttonstyle"
        />

    <Button
        android:id="@+id/btn_double_player"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonstyle"
        android:onClick="btnsClick"
        android:text="@string/double_player"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonstyle"
        android:onClick="btnsClick"
        android:text="@string/help"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_contact_us"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contact_us"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:onClick="btnsClick"
        android:background="@drawable/buttonstyle"
        />
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/exit"
        android:textSize="20sp"
        android:onClick="btnsClick"
        android:background="@drawable/buttonstyle"
        />
</LinearLayout>