<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:visibility="visible"
    android:id="@+id/player_name_layout_0">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/player_name_layout_1"
        android:padding="10dp">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_name_please"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/edt_player1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:hint="@string/_player1"
            android:gravity="center"
            android:background="@drawable/style1"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="#080808"/>
        <EditText
            android:id="@+id/edt_player2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/_player2"
            android:textStyle="bold"
            android:background="@drawable/style1"
            android:layout_below="@id/edt_player1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textColor="#080808"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_play"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_player2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/play"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/buttonstyle"
            android:textSize="25sp"
            />
    </RelativeLayout>

    </RelativeLayout>